# 212-cpp-game-FelixAtForsberg

./: CMakeLists.txt  _cpp_game_notes.md  env_clion_eap_llvm.sh  main.cpp
_deprecated/: _2CMakeLists.txt  _CMakeLists.txt  _stream_debug_log.h  env_clion_eap_llvm.sh
_notes/: _SDL_INDEX.h  _SDL_INDEX_Surface.h  _cmake_103_cpp_marc.md  _cpp_game_notes.md  _toolchains.md  _tutorial_index.md
source/: CMakeLists.txt  main.cpp
source/game/: TextureFactory.cpp  TextureFactory.h  game.cpp  game.h  game_entity.h  game_scene.cpp  game_scene.h  game_ui.cpp  game_ui.h  physics.cpp  scene.cpp  scene.h  scene_create_entity.inl
source/game/entities/: entity_background.hpp  entity_bottle.hpp  game_entity.cpp  game_entity.h  game_entity_physics.cpp  game_entity_physics.h  game_entity_renderable.cpp  game_entity_renderable.h  game_entity_textured.cpp  game_entity_textured.h
source/game/input/: game_input.cpp
source/graphics/: render_context.cpp  render_context.h  render_context.hpp  texture.cpp  texture.h  texture_factory.cpp  texture_factory.h
source/system/: collections.hpp  debug_log.h  debug_log.hpp  debug_prints.h  error.cpp  error.h  files.cpp  files.h  framecounter.hpp  sdl_cpp_interop.hpp  system_static.cpp  system_static.h  window.cpp  window.h
source/system/event/: events.cpp  events.h
source/system/file/: convert_endian.inl  file.cpp  file.h  file_image.cpp  file_image.h
source/system/files/: convert_endian.inl  file.cpp  file.h  file_image.cpp  file_image.h
tests/: CMakeLists.txt  main.cpp  test_file.cpp  test_texture.cpp  test_window.cpp
